scrollbar + fix style

--- a/src/app/App.css
+++ b/src/app/App.css
@@ -1,34 +1,52 @@
 html, body {
   background-color: #000000;
   margin: 0;
+  position: fixed;
+  height: 100%;
+  overflow: hidden;
 }
 
-#root {
- background-color: #000000;
-}
 .terminal {
   text-align: left;
   font-size: 16px;
-  background-color: #000;
+  background-color: transparent;
   border: 0 solid #000;
   color: #00ff00;
   font-family: courier new, serif;
   font-weight: 100;
-  width: 100%;
-  height: 100%;
-  position: fixed;
-  overflow-y: auto;
-  overflow-x: hidden;
 }
 .container {
-  padding: 8px;
+  padding: 0 8px 0 8px;
+  overflow-y: auto;
+  position: fixed;
+  height: 100%;
+  width: calc(100% - 15px);
 }
+
+.container::-webkit-scrollbar-track
+{
+  background-color: #000000;
+}
+
+.container::-webkit-scrollbar
+{
+  width: 10px;
+  background-color: #000000;
+}
+
+.container::-webkit-scrollbar-thumb
+{
+  background-color: #00ff00;
+  border: 2px solid #00ff00;
+}
+
+
 .terminal-input {
   margin: 0 0 0 10px;
   font-size: 16px;
   color: #00ff00;
   font-family: courier new, serif;
-  background-color: #000;
+  background-color: transparent;
   border: 0 solid #000;
   padding: 0;
   box-shadow: none;
@@ -46,4 +64,5 @@ html, body {
   justify-content: flex-start;
   align-items: flex-start;
   flex-direction: row;
+  padding-bottom: 5px;
 }
